# inputwhile

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  ruff.toml  setup.py
inputwhile/: __init__.py  modulo.py  utils.py
tests/: test.py
