[project]
name = "inputwhile"
version = "1.1.0"
description = "A simple input while loop utility"
readme = "README.md"
authors = [{ name = "Benjas333" }]
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
dependencies = []
keywords = ["input", "inputwhile", "while", "whileinput", "loop", "utility"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/Benjas333/inputwhile"
Issues = "https://github.com/Benjas333/inputwhile/issues"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
